# DHBW_WWI2024H_4.Semester_Fallstudie

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  health.py  router.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: base.py  session.py
backend/app/modules/analytics/: repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/document_upload/: router.py  schemas.py  service.py
backend/app/modules/frontend_bff/: curated_templates.py  mappers.py  places_service.py  router.py  schemas.py  service.py  tracking_repository.py
backend/app/modules/meal_kit_catalog/: repository.py  router.py  schemas.py  service.py
backend/app/modules/nutrition_assessment/: repository.py  router.py  schemas.py  service.py
backend/app/modules/nutrition_plan/: repository.py  router.py  schemas.py  service.py
backend/app/modules/order_handling/: repository.py  router.py  schemas.py  service.py
backend/app/modules/patient_profile/: repository.py  router.py  schemas.py  service.py
backend/app/modules/professional_review/: repository.py  router.py  schemas.py  service.py
backend/app/modules/questionnaire_intake/: repository.py  router.py  schemas.py  service.py
backend/app/modules/recipe_catalog/: router.py  service.py
backend/app/modules/recommendation_engine/: repository.py  router.py  rules.py  (+3 more)
backend/app/tests/: helpers.py
backend/scripts/seed/: seed_demo_data.py
(+134 files in other folders)
