[project]
name = "food4recovery-backend"
version = "0.1.0"
description = "Backend scaffold for Food 4 Recovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "pytest",
  "sqlalchemy",
  "uvicorn",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["latest_logs*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
